# tp_link_bot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
src/: commands.py  configreader.py  filters.py  keyboards.py  lexicon.py  user_handers.py
src/services/: enums.py  sessions.py
